--- a/front-end/readable/package.json
+++ b/front-end/readable/package.json
@@ -3,8 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.2.2",
+    "@types/react-redux": "^6.0.9",
+    "contentful": "^7.0.4",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-material-ui": "0.0.1",
     "react-redux": "^5.0.7",
     "react-redux-loading": "^1.0.1",
     "react-scripts-ts": "3.1.0",
