--- a/front-end/readable/package.json
+++ b/front-end/readable/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^3.2.2",
+    "@material-ui/icons": "^3.0.1",
     "@types/react-redux": "^6.0.9",
     "contentful": "^7.0.4",
     "react": "^16.5.2",
