--- a/front-end/readable/package.json
+++ b/front-end/readable/package.json
@@ -12,6 +12,7 @@
     "react-material-ui": "0.0.1",
     "react-redux": "^5.0.7",
     "react-redux-loading": "^1.0.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts-ts": "3.1.0",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0"
