--- a/front-end/readable/package.json
+++ b/front-end/readable/package.json
@@ -29,5 +29,11 @@
     "@types/react": "^16.7.6",
     "@types/react-dom": "^16.0.9",
     "typescript": "^3.1.6"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
